--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/estilo.css">
-        <script src="./js/jquery-3.2.1.min.js" defer></script>
+        <script src="./js/script.js" defer></script>
         <title>SPACETUR</title>
     </head>
     <body>
-        <div class="container"></div>
-            <header class="cabecalho">
-                <div class="logo">
+        <div id="container"></div>
+            <header id="cabecalho">
+                <div id="logo">
                     <img src="./img/logo-spacetours.png" alt="logo">
                 </div>
-                <div class="menu">
+                <div id="menu">
                     <nav>
                         <ul>
                             <li><a href="#">Home</a></li>
@@ -26,16 +26,16 @@
                 </div>
             </header>
 
-            <section class="banner">
+            <section id="banner">
                 <img src="./img/banner.jpg" alt="">
-                <div class="box">                    
+                <div id="box">                    
                     <h1>TERRA: SUA LINDA!</h1>
                     <P>Experimente a mudança de paradigma de conhecer o nosso planeta azul de um novo ponto de vista.</P>
                     <a href="#">Leia depoimentos</a>
                 </div>
             </section>
 
-            <footer class="rodape">
+            <footer id="rodape">
                 <p>2021.Design Responsivo</p>
                 <small>Criado por Daniel Henrique</small>
                 <a href="#">Alexandre Carlos</a>
