--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 <div id="menu">
                     <nav>
                         <ul>
-                            <li><a href="#">Home</a></li>
+                            <li><a href="#" class="active">Home</a></li>
                             <li><a href="#">Sobre</a></li>
                             <li><a href="#">Pacotes</a></li>
-                            <li><a href="#">Contato</a></li>
+                            <li><a href="./contato.html">Contato</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -28,9 +28,9 @@
 
             <section id="banner">
                 <img src="./img/banner.jpg" alt="">
-                <div id="box">                    
+                <div id="box">
                     <h1>TERRA: SUA LINDA!</h1>
-                    <P>Experimente a mudança de paradigma de conhecer o nosso planeta azul de um novo ponto de vista.</P>
+                    <p>Experimente a mudança de paradigma de conhecer o nosso planeta azul de um novo ponto de vista.</p>
                     <a href="#">Leia depoimentos</a>
                 </div>
             </section>
