Add java script a pagina.

--- a/contato.html
+++ b/contato.html
@@ -27,7 +27,7 @@
             </header>
 
             <section id="form-box">
-                <form action="contato.html" method="get">
+                <form action="./index.html" method="get" class="campos">
                     <fieldset>
                         <legend>Cadastro</legend>
                         <input type="text" name="nmUser" id="nmUserId" placeholder="  Nome" class="campos">
@@ -39,7 +39,7 @@
                         <input type="date" name="dtNasc" id="dtNascId" placeholder="  Data de nascimento" class="campos">
                         <legend>Qual a sua motivação para a viagem?</legend>
                         <input type="text" name="msg-rotulo" id="msgRotuloId" class="campos">
-                        <input type="button" value="Cadastrar" id="cadastroId">
+                        <input type="button" value="Cadastrar" id="cadastroId" class="botao">
                     </fieldset>
                 </form>
             </section>
